# medical_chat_assistant

./: README.md
chat_assistant/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.simple.yml  docker-compose.yml  env.example  pyproject.toml  pytest.ini  test_new_ingest.py
chat_assistant/monitoring/: prometheus.yml
chat_assistant/src/app/: __init__.py  main.py
chat_assistant/src/app/api/: __init__.py  answer.py  explain.py  ingest.py  quiz.py
chat_assistant/src/app/core/: __init__.py  config.py  middleware.py  observability.py
chat_assistant/src/app/domain/: __init__.py  models.py  ports.py  schemas.py
chat_assistant/src/app/repositories/: __init__.py  chroma_question_repository.py  chroma_vector_repository.py  question_repository.py  vector_repository.py
chat_assistant/src/app/services/: __init__.py  answer_service.py  cache_service.py  embedding_service.py  explain_service.py  ingest_service.py  llm_service.py  performance_service.py  quiz_service.py  rag_service.py
